<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
    android:screenOrientation="sensor"
    android:key="main_preferences">
    
    <PreferenceCategory
            android:title="@string/preference_category_internetSettings"
            android:key="@string/preference_category_internetSettings_key">
    <Preference
    	android:key="@string/preference_wifiSettings_key"
        android:title="@string/preference_wifi"/>
     <Preference
    	android:key="@string/preference_data_roamingSettings_key"
        android:title="@string/preference_data_roaming"/>
    <!--<intent 
            android:action="android.provider.Settings.ACTION_WIFI_SETTINGS"/> -->
    </PreferenceCategory>
    
     <PreferenceCategory
            android:title="@string/preference_category_cacheSettings"
            android:key="@string/preference_category_cacheSettings_key">
		<Preference
    		android:key="@string/preference_clear_memory_cache_key"
        	android:title="@string/preference_clear_memory_cache"/>
		<Preference
    		android:key="@string/preference_clear_disc_cache_key"
        	android:title="@string/preference_clear_disc_cache"/>
		
    </PreferenceCategory>
    
    
	<PreferenceCategory 
		android:title="@string/preference_category_debug"
		android:key="@string/preference_category_debug_key">
		<CheckBoxPreference
			android:key="@string/preference_debug_key"
			android:title="@string/preference_debug" 
			android:defaultValue="false"/>
	</PreferenceCategory>

</PreferenceScreen>
